--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "14sa9-todos",
-  "version": "1.0.1",
+  "name": "16sa9-todos",
+  "version": "1.0.4",
+                   
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "type": "module",
-  "bin": "index.js",
+  "bin": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
